added svg components & improved form component

--- a/client/package.json
+++ b/client/package.json
@@ -41,6 +41,8 @@
     ]
   },
   "devDependencies": {
+    "@svgr/cli": "^5.5.0",
+    "@svgr/webpack": "^5.5.0",
     "react-styleguidist": "^11.1.5"
   }
 }
